tests/tooling/fixtures/native/execution/negative/for_condition_function_value.objc3
module ForConditionFunctionValueExec;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  for (let i = 0; ready; i = i + 1) {
    let x = i;
  }
  return 0;
}
